--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@ cypress.env.json
 cypress.config.js
 
 /node_modules
+/.github
+/cypress/reports
+/cypress/screenshots
+/cypress/videos
+
+.editorconfig
