--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "Test using Cypress",
   "main": "index.js",
   "scripts": {
-    "test" : "npx cypress open",
+    "test": "npx cypress open",
     "test:register": "npx cypress run --spec 'cypress/e2e/1.wool-app-v1/client/register.cy.js'",
     "test:login": "npx cypress run --spec 'cypress/e2e/1.wool-app-v1/client/login.cy.js'"
-
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +15,7 @@
   },
   "devDependencies": {
     "@cypress/xpath": "^2.0.3",
+    "@faker-js/faker": "^8.0.2",
     "cypress-mochawesome-reporter": "^3.3.0"
   }
 }
