--- a/.github/workflow/main.yml
+++ b/.github/workflow/main.yml
@@ -28,6 +28,6 @@ jobs:
         env:
           # For recording and parallelization to work you must set your CYPRESS_RECORD_KEY
           # in GitHub repo → Settings → Secrets → Actions
-          CYPRESS_RECORD_KEY: 24843d39-709c-454e-bacc-0ccf14d4954e
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           # Creating a token https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/creating-a-personal-access-token
-          GITHUB_TOKEN: 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
+          GITHUB_TOKEN:  ${{ secrets.GITHUB_TOKEN }}
