--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,36 +1,45 @@
 name: End-to-end tests
 on: push
 jobs:
-  cypress-run:
-    runs-on: ubuntu-22.04
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      # Install npm dependencies, cache them correctly
-      # and run all Cypress tests
-      - name: Write the cypress.env.json file 📝
-        # use quotes around the secret, as its value
-        # is simply inserted as a string into the command
-        run: |
-          echo '${{ secrets.CYPRESS_ENV_GITHUB }}' > cypress.env.json
-      - name: Cypress run
-        uses: cypress-io/github-action@v6
-      # after the test run completes store videos and any screenshots
-      - uses: actions/upload-artifact@v3
-        # add the line below to store screenshots only on failures
-        # if: failure()
-        with:
-          name: cypress-screenshots
-          path: cypress/screenshots
-          if-no-files-found: ignore # 'warn' or 'error' are also available, defaults to `warn`
-      - uses: actions/upload-artifact@v3
-        with:
-          name: cypress-videos
-          path: cypress/videos
-          if-no-files-found: ignore # 'warn' or 'error' are also available, defaults to `warn`
-        env:
-          # For recording and parallelization to work you must set your CYPRESS_RECORD_KEY
-          # in GitHub repo → Settings → Secrets → Actions
-          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
-          # Creating a token https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/creating-a-personal-access-token
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    cypress-run:
+        runs-on: ubuntu-22.04
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v4
+            # Install npm dependencies, cache them correctly
+            # and run all Cypress tests
+            - name: Write the cypress.env.json file 📝
+              # use quotes around the secret, as its value
+              # is simply inserted as a string into the command
+              run: |
+                  echo '${{ secrets.CYPRESS_ENV_GITHUB }}' > cypress.env.json
+            - name: Cypress run
+              uses: cypress-io/github-action@v6
+              with:
+                  #   # Starts web server for E2E tests - replace with your own server invocation
+                  #   # https://docs.cypress.io/guides/continuous-integration/introduction#Boot-your-server
+                  #   start: npm start
+                  #   wait-on: "http://localhost:3000" # Waits for above
+                  # Records to Cypress Cloud
+                  # https://docs.cypress.io/guides/cloud/projects#Set-up-a-project-to-record
+                  record: true
+                  parallel: true # Runs test in parallel using settings above
+            # after the test run completes store videos and any screenshots
+            - uses: actions/upload-artifact@v3
+              # add the line below to store screenshots only on failures
+              # if: failure()
+              with:
+                  name: cypress-screenshots
+                  path: cypress/screenshots
+                  if-no-files-found: ignore # 'warn' or 'error' are also available, defaults to `warn`
+            - uses: actions/upload-artifact@v3
+              with:
+                  name: cypress-videos
+                  path: cypress/videos
+                  if-no-files-found: ignore # 'warn' or 'error' are also available, defaults to `warn`
+              env:
+                  # For recording and parallelization to work you must set your CYPRESS_RECORD_KEY
+                  # in GitHub repo → Settings → Secrets → Actions
+                  CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+                  # Creating a token https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/creating-a-personal-access-token
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
