--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,10 +16,10 @@ jobs:
             - name: Cypress run
               uses: cypress-io/github-action@v6
               with:
-                  #   # Starts web server for E2E tests - replace with your own server invocation
-                  #   # https://docs.cypress.io/guides/continuous-integration/introduction#Boot-your-server
-                  #   start: npm start
-                  #   wait-on: "http://localhost:3000" # Waits for above
+                  # Starts web server for E2E tests - replace with your own server invocation
+                  # https://docs.cypress.io/guides/continuous-integration/introduction#Boot-your-server
+                  start: npm start
+                  wait-on: "http://localhost:3000" # Waits for above
                   # Records to Cypress Cloud
                   # https://docs.cypress.io/guides/cloud/projects#Set-up-a-project-to-record
                   record: true
